--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -12,6 +12,10 @@ jobs:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
           VM_NAME: ${{ secrets.VM_NAME }}
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_PWD: ${{ secrets.DB_PWD }}
+          DB_USER: ${{ secrets.DB_USER }}
         steps:
         - name: Login
           uses: google-github-actions/setup-gcloud@v0
